KOGITO-3086 - make LimeExplainer API async